[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Unit1_2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Lv2Army/ArcherLv2Idle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Lv2Army/ArcherLv2Attack.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 13, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 39, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 65, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 91, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 13, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 26, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 39, 0, 13, 15 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 13, 15 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 14 ) ],
"loop": true,
"name": "Shoot",
"speed": 4.5
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 2.18298, 5.06252 )

[sub_resource type="CircleShape2D" id=18]
radius = 95.8482

[node name="Unit1_2" type="Node2D" groups=[
"archer2",
]]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[node name="aimcast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 3, 3 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Idle"
frame = 5
playing = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 33024
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1.13393, 0 )
shape = SubResource( 17 )

[node name="AttackingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 18 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered" flags=3]
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered" flags=3]
